--- a/pages/agradecimento.html
+++ b/pages/agradecimento.html
@@ -7,10 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+
     <title>Feedback - Agradecimento</title>
 </head>
 <body>
-    <div>
+    <div class="card">
         <img src="../images/illustration-thank-you.svg" alt="ilustração de agradecimento">
 
         <p>Você selecinou 4 de 5</p>
