--- a/pages/agradecimento.html
+++ b/pages/agradecimento.html
@@ -15,7 +15,7 @@
     <div class="card">
         <img src="../images/illustration-thank-you.svg" alt="ilustração de agradecimento">
 
-        <p>Você selecinou 4 de 5</p>
+        <p class="paragrafo_nota">Você selecinou 4 de 5</p>
 
         <h1>Obrigado!</h1>
 
